# nlpanno

./: README.md  docker-compose.yml  pgservers.json
backend/: .dockerignore  .gitignore  .pylintrc  Dockerfile  main.py  mtop.db  noxfile.py  pyproject.toml  requirements.txt  setup.py
backend/examples/: manual-mtop.py  mtop.py
backend/nlpanno/: database.py
backend/src/nlpanno/: cli.py  config.py  container.py  data.py  database.py  datasets.py  domain.py  embedding.py  estimation.py  infrastructure.py  logging.py  main.py  sampling.py  scripts.py  taskconfig.py  usecases.py  worker.py
backend/src/nlpanno/adapters/: __init__.py  embedding_transformers.py  embedding_worker.py  estimation_worker.py  inmemory.py  sampling.py  sqlalchemy.py
backend/src/nlpanno/adapters/annotation_api/: app.py  controller_sample.py  controller_static.py  controller_task.py  main.py  mapper.py  requestcontext.py  schema.py
backend/src/nlpanno/adapters/persistence/: inmemory.py  sqlalchemy.py
backend/src/nlpanno/annotation/: __init__.py  api.py  app.py  middlewares.py  requestcontext.py  static.py  transferobject.py  types.py
backend/src/nlpanno/application/: service.py  unitofwork.py  usecase.py
backend/src/nlpanno/database/: __init__.py  base.py  inmemory.py  sqlalchemy.py  sqlite.py
backend/src/nlpanno/domain/: __init__.py  model.py  repository.py
backend/src/nlpanno/server/: api.py  app.py  dependencies.py  logging.py  middlewares.py  requestcontext.py  routes.py  static.py  status.py  transferobject.py  types.py
backend/src/nlpanno/update/: __init__.py  meanembedding.py
backend/tests/: test_adapters.py  test_annotation.py  test_annotation_api.py  test_data.py  test_database.py  test_dataset.py  test_persistence.py  test_sampling.py  test_server.py  test_transferobject.py  test_worker.py
client/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
client/public/: index.html
client/src/: App.css  App.module.css  App.tsx  Root.tsx  api.ts  api.tsx  appState.ts  (+5 more)
(+19 files in other folders)
