[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlpanno"
requires-python = ">= 3.9"
version="0.0.1"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sentence-transformers",
]

[project.optional-dependencies]
develop = [
    "pre-commit",
    "isort",
    "black",
    "flake8",
    "pylint",
    "mypy",
]
tests = [
    "httpx",
    "pytest",
    "requests",
    "pytest-mock",
]

[tool.mypy]
ignore_missing_imports = true

[tool.pylint.TYPECHECK]
# List of members which are set dynamically and missed by Pylint inference
# system, and so shouldn't trigger E1101 when accessed.
generated-members="numpy.*, torch.*, pydantic.*"

[tool.pylint.'SIMILARITIES']
ignore-imports=true