[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlpanno"
requires-python = ">= 3.9"
version="0.0.1"
dependencies = [
    "asgi_correlation_id",
    "colorlog",
    "fastapi",
    "pydantic >= 2.0",
    "pydantic-settings",
    "psycopg2-binary",
    "sentence-transformers",
    "sqlalchemy",
    "typer",
    "uvicorn[standard]",
]

[project.scripts]
nlpanno = "nlpanno.main:app"

[project.optional-dependencies]
develop = [
    "pre-commit",
    "mypy",
    "ruff",
]
tests = [
    "httpx",
    "pytest",
    "requests",
    "pytest-mock",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "ANN",  # annotation / type hints
]
ignore = [
   "ANN101",  # Deprecated rule that checks that instance method self arguments have type annotations.
   "ANN102",  # Deprecated rule that checks that class method cls arguments have type annotations.
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true